examples/good/lambdas/03_catch_regular_function.lk
int f(int a, int b) {
    return a + b;
}

int main() {
    (int, int) => int g = f;

    print(g(2,4));
}