examples/bad/wrong_return_type.lk
int main() {
    print(2);

    return "a";

    print(3);
}